// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`password recovery complete when new password is invalid should return an error 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "minLength": "password must be longer than or equal to 6 characters",
      },
      "property": "password",
      "target": Object {
        "password": "foo",
      },
      "value": "foo",
    },
  ],
  "statusCode": 400,
}
`;

exports[`password recovery complete when the password is the same as previous one should return an error 1`] = `
Object {
  "error": "Bad Request",
  "message": "New password must be different form the previous one",
  "statusCode": 400,
}
`;

exports[`password recovery complete when token is expired should return an error 1`] = `
Object {
  "error": "Bad Request",
  "message": "Invalid token",
  "statusCode": 400,
}
`;

exports[`password recovery complete when token is valid should be successful 1`] = `Object {}`;
